# cognition

./: .gitignore  CLAUDE.md  pyproject.toml  readme.md
.claude/agent-memory/experiment-runner/: MEMORY.md  project_baseline_no_prior_traces.md  project_env_versions.md  project_openai_schema_compat.md  project_openai_structured_output_bug.md
.claude/agents/: experiment-runner.md
cognition/: agent.py  cognitive_step.py  state.py  tracing.py  types.py
cognition/llm/: __init__.py  anthropic.py  base.py  openai.py  openrouter.py
experiment_results/: 2026-03-15_gpt5-nano-toy-task.md  2026-03-16_toy-task-gpt5-nano.md  2026-04-05_scaffold-vs-baseline-token-constrained.md  2026-04-05_toy-task-reasoning-ablation.md  2026-04-07_trading-task-scaffold-vs-baselines.md
experiments/: tasks.py  toy_task.py  toy_task_baseline.py
plan/: impl.md  plan.md
scripts/: toy_experiment.sh
tests/: test_cognitive_step.py  test_state.py
traces/toy_task/20260407_151018/: memory_map.txt  run.json  state.json  trace.json
traces/toy_task/20260407_153955/: memory_map.txt  run.json  state.json  trace.json
traces/toy_task/20260407_160551/: memory_map.txt  run.json  state.json  trace.json
traces/toy_task/20260407_195546/: memory_map.txt  run.json  state.json  trace.json
