[project]
name = "cognition"
version = "0.1.0"
description = "Inference-time scaffold for LLMs with theoretically unbounded context through externalized structured memory"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "/home/tzeyang/.pyenv/versions/3.12.9/envs"
venv = "cognition"
